# custom_mmdeploy

./: CMakeLists.txt  README.md  inference.py
configs/mmpose/: pose-detection_ncnn_static-256x192_RTMPose.py  pose-detection_ncnn_static-256x192_RTMPose_int8.py  pose-detection_onnxruntime_static_RTMPose.py  pose-detection_tensorrt_static-256x192_RTMPose.py  pose-detection_tensorrt_static-256x256_RTMPose.py
custom_example/: CMakeLists.txt
custom_example/src/c/: cmake_template_version.h
custom_example/src/cpp/: custom_pose_detector.cpp  mmpose_deploy_version.hpp.in
